- 0004150: [filters] Custom field names are not localised in filters (vboctor)
- 0004183: [filters] HTML entities in search text (narcissus)
- 0004207: [filters] Mantis forgets user filter after logout (narcissus)
- 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
- 0004083: [sponsorships] Users without email address must not be able to sponsor issues (thraxisp)
- 0002861: [bugtracker] misleading 'copyright' at the pages' bottom (vboctor)
- 0003710: [bugtracker] time stats in summary to use resolved (thraxisp)
- 0004031: [bugtracker] Hiding/removing fixed_in_versions (thraxisp)
- 0004154: [bugtracker] "Product version" and "Fixed in Version" do not get updated on rename (vboctor)
- 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
- 0004175: [bugtracker] Links are not hyperlinked properly if containing '[' or ']' (vboctor)
- 0004182: [bugtracker] print_all_bug_page should show all issues matching current filter (vboctor)
- 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
- 0004078: [upgrade] Script to import the value of a custom field to a native field (thraxisp) 
- 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
- 0002220: [installation] usage of consistent naming schema for images (vboctor)
- 0004163: [other] Unreadable error messages in some languages (vboctor)
- 0004222: [sql] Should mantis_project_category_table.user_id be UNSIGNED? (vboctor)
- New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
- New Config: show_realname (default OFF) - show realname in all places instead of username (thraxisp)
- Updated German, French, Brazilian Portuguese, japanese_euc, japanese_sjis, Korean, Russian and japanese_utf8 language.

2004.07.20  -  0.19.0a2
